--- a/blog.html
+++ b/blog.html
@@ -47,7 +47,7 @@
             <ul class="outline posts-list">
                 <li  class="posts-item">
                    <article class="posts-content">   
-                        <img src="images/blog1.jpg" alt="" width="380" height="220">
+                        <img class="posts-img-one" src="images/blog1.jpg" alt="" width="380" height="220">
                             <p class="posts-date">23rd August 2018</p>
                         <a href="#">
                             <h2 class="posts-title">Top 5 fastest growing it service companies in philly</h2>
@@ -58,7 +58,7 @@
                 </li>
                 <li  class="posts-item">
                     <article class="posts-content">
-                        <img src="images/blog2.jpg" alt="" width="380" height="220">
+                        <img class="posts-img-two" src="images/blog2.jpg" alt="" width="380" height="220">
                         <p class="posts-date">23rd August 2018</p>
                         <a href="#">
                         <h2 class="posts-title">Best financial</h2>
@@ -68,7 +68,7 @@
                 </li>
                 <li  class="posts-item">
                     <article class="posts-content">
-                        <img src="images/blog3.jpg" alt="" width="380" height="220">
+                        <img class="posts-img-three" src="images/blog3.jpg" alt="" width="380" height="220">
                         <p class="posts-date">23rd August 2018</p>
                         <a href="#">
                         <h2 class="posts-title">Company logo or brand identity: which one is more important? brand identity</h2>
@@ -78,7 +78,7 @@
                 </li>
                 <li  class="posts-item">
                     <article class="posts-content">
-                        <img src="images/blog4.jpg" alt="" width="380" height="220">
+                        <img class="posts-img-four" src="images/blog4.jpg" alt="" width="380" height="220">
                         <p class="posts-date">23rd August 2018</p>
                         <a href="#">
                             <h2 class="posts-title">Best financial</h2>
@@ -88,7 +88,7 @@
                 </li>
                 <li  class="posts-item">
                     <article class="posts-content">
-                        <img src="images/blog5.jpg" alt="" width="380" height="220">
+                        <img class="posts-img-five" src="images/blog5.jpg" alt="" width="380" height="220">
                         <p class="posts-date">23rd August 2018</p>
                         <a href="#">
                         <h2 class="posts-title">Company logo or brand identity: which one is more important? brand identity</h2>
@@ -98,7 +98,7 @@
                 </li>
                 <li  class="posts-item">
                     <article class="posts-content">
-                        <img src="images/blog6.jpg" alt="" width="380" height="220">
+                        <img class="posts-img-six" src="images/blog6.jpg" alt="" width="380" height="220">
                         <p class="posts-date">23rd August 2018</p>
                         <a href="#">
                         <h2 class="posts-title">Top 5 fastest growing it service companies in philly</h2>
@@ -142,7 +142,7 @@
             <div class="footer-first-block" tabindex="0">
                 <div class="footer-block-item" tabindex="0">
                     <h4 class="">Navigation</h4>
-                    <nav>
+                    <nav class="footer-nav">
                         <ul class="outline footer-list">
                             <li class="footer-item"><a class="footer-link" href="#">About Us</a></li> 
                             <li class="footer-item"><a class="footer-link" href="#">Blog</a></li>
@@ -155,7 +155,7 @@
                 </div>
             <div class="footer-block-item" tabindex="0">
                 <h4 class="">Customer Information</h4>
-                <nav>
+                <nav class="footer-nav">
                     <ul class="outline footer-list">
                         <li class="footer-item"><a class="footer-link" href="#">Contact Us</a></li> 
                         <li class="footer-item"><a class="footer-link" href="#">Sale Exclusions</a></li>
