--- a/toys.html
+++ b/toys.html
@@ -73,7 +73,7 @@
                             <fieldset>
                                 <legend>Color</legend>
                                 <div class="checkbox" tabindex="0">
-                                    <input class="input" type="checkbox" id="contant-black" >
+                                    <input class="input" type="checkbox" id="contant-black" checked>
                                     <label for="contant-black">Black</label>
                                 </div>                                
                                 <div class="checkbox" tabindex="0">
@@ -96,7 +96,7 @@
                                     <label for="shipping-free">Free shipping</label>
                                 </div>                                
                                 <div class="radiobox" tabindex="0">
-                                    <input class="radio" type="radio" name="radio" id="shipping-fast">
+                                    <input class="radio" type="radio" name="radio" id="shipping-fast" checked>
                                     <label for="shipping-fast">Fast shipping</label>
                                 </div>
                             </fieldset>
@@ -116,7 +116,7 @@
                                 </div>                                           
                             </fieldset>                                                               
                             <div class="filter-item" tabindex="0">
-                            <button class="button" type="submit">Aply</button>
+                            <button class="button" type="submit">Apply</button>
                             </div>  
                 </form>
         </section>
@@ -126,7 +126,7 @@
                 <li class="products-item">
                     <div class="container-link" tabindex="0">
                         <a href="#">
-                            <img class="products-img" src="images/toy1.jpg" alt="" width="380" height="385">
+                            <img class="products-img" src="images/toy1.jpg" alt="SHARKY BEAN BAG CHAIR COVER" width="380" height="385">
                         </a>
                         <a href="#">
                             <p class="title-link">SHARKY BEAN BAG CHAIR COVER</p>
@@ -137,7 +137,7 @@
                 <li class="products-item">
                     <div class="container-link" tabindex="0">
                         <a href="#">
-                            <img src="images/toy2.jpg" alt="" width="380" height="385">
+                            <img src="images/toy2.jpg" alt="BRASS DECO FRAMES" width="380" height="385">
                         </a>
                         <a href="#">
                             <p class="title-link">BRASS DECO FRAMES</p>
@@ -148,7 +148,7 @@
                 <li class="products-item">
                     <div class="container-link" tabindex="0">
                         <a href="#">
-                            <img src="images/toy3.jpg" alt="" width="380" height="385">
+                            <img src="images/toy3.jpg" alt="CIBO FULL APRON" width="380" height="385">
                         </a>
                         <a href="#">
                             <p class="title-link">CIBO FULL APRON</p>
@@ -159,7 +159,7 @@
                 <li class="products-item">
                     <div class="container-link" tabindex="0">
                         <a href="#">
-                            <img src="images/toy4.jpg" alt="" width="380" height="385">
+                            <img src="images/toy4.jpg" alt="GATCHA GATCHA GUMBALL MACHINE" width="380" height="385">
                         </a>
                         <a href="#">
                             <p class="title-link">GATCHA GATCHA GUMBALL MACHINE</p>
@@ -170,7 +170,7 @@
                 <li class="products-item">
                     <div class="container-link" tabindex="0">
                         <a href="#">
-                        <img src="images/toy5.jpg" alt="" width="380" height="385">
+                        <img src="images/toy5.jpg" alt="HRISTMAS ADVENT SCENTED CANDLE" width="380" height="385">
                     </a>
                     <a href="#">
                         <p class="title-link">CHRISTMAS ADVENT SCENTED CANDLE</p>
@@ -181,7 +181,7 @@
                 <li class="products-item">
                     <div class="container-link" tabindex="0">
                         <a href="#">
-                            <img src="images/toy6.jpg" alt="" width="380" height="382">
+                            <img src="images/toy6.jpg" alt="TANGLE SPINNING TEA LIGHT" width="380" height="382">
                         </a>
                         <a href="#">
                             <p class="title-link">TANGLE SPINNING TEA LIGHT</p>
@@ -225,7 +225,7 @@
             <div class="footer-first-block" tabindex="0">
                 <div class="footer-block-item" tabindex="0">
                     <h4>Navigation</h4>
-                    <nav>
+                    <nav class="footer-nav">
                         <ul class="outline footer-list">
                             <li class="footer-item"><a class="footer-link" href="#">About Us</a></li> 
                             <li class="footer-item"><a class="footer-link" href="#">Blog</a></li>
@@ -238,7 +238,7 @@
                 </div>
             <div class="footer-block-item" tabindex="0">
                 <h4>Customer Information</h4>
-                <nav>
+                <nav class="footer-nav">
                     <ul class="outline footer-list">
                         <li class="footer-item"><a class="footer-link" href="#">Contact Us</a></li> 
                         <li class="footer-item"><a class="footer-link" href="#">Sale Exclusions</a></li>
