--- a/catalog.html
+++ b/catalog.html
@@ -101,7 +101,7 @@
             <div class="footer-first-block" tabindex="0">
                 <div class="footer-block-item" tabindex="0">
                     <h4>Navigation</h4>
-                    <nav>
+                    <nav class="footer-nav">
                         <ul class="outline footer-list">
                             <li class="footer-item"><a class="footer-link" href="#">About Us</a></li> 
                             <li class="footer-item"><a class="footer-link" href="#">Blog</a></li>
@@ -114,7 +114,7 @@
                 </div>
             <div class="footer-block-item" tabindex="0">
                 <h4>Customer Information</h4>
-                <nav>
+                <nav class="footer-nav">
                     <ul class="outline footer-list">
                         <li class="footer-item"><a class="footer-link" href="#">Contact Us</a></li> 
                         <li class="footer-item"><a class="footer-link" href="#">Sale Exclusions</a></li>
