--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
             <div class="footer-first-block" tabindex="0">
                 <div class="footer-block-item" tabindex="0">
                     <h4 class="">Navigation</h4>
-                    <nav>
+                    <nav class="footer-nav">
                         <ul class="outline footer-list">
                             <li class="footer-item"><a class="footer-link" href="#">About Us</a></li> 
                             <li class="footer-item"><a class="footer-link" href="#">Blog</a></li>
@@ -100,7 +100,7 @@
                 </div>
             <div class="footer-block-item" tabindex="0">
                 <h4 class="">Customer Information</h4>
-                <nav>
+                <nav class="footer-nav">
                     <ul class="outline footer-list">
                         <li class="footer-item"><a class="footer-link" href="#">Contact Us</a></li> 
                         <li class="footer-item"><a class="footer-link" href="#">Sale Exclusions</a></li>
